# phd-prospect

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  SPEC.md  compose.yaml  package.json  pyproject.toml
.github/workflows/: test.yml
docs/: PLAN-consolidation.md  PLAN-js-rewrite.md  claude-code-n8n-mcp-setup.md  setup.md
docs/adr/: 0001-bounded-agentic-research.md  0002-notion-first-storage.md  0003-evidence-backed-records.md  0005-git-source-of-truth-for-n8n.md  (+1 more)
docs/agents/: domain.md  (+2 more)
fixtures/: opportunity-candidate.json
n8n/: README.md
schemas/: opportunity-candidate.schema.json
scripts/: bootstrap_notion.py  compare_workflows.py
seeds/: README.md
tests/: build-workflows.test.cjs  compare-workflows.test.cjs  contract-identity.test.cjs  contract-normalize.test.cjs  contract-opportunity-page.test.cjs  contract-recheck.test.cjs  contract-reminders.test.cjs  merge-research.test.cjs  missing-fields.test.cjs  notion-bootstrap.test.cjs  notion-schema.test.cjs  seed.test.cjs  test_build_workflows.py  test_cli.py  test_compare_workflows.py  test_contact_pages.py  test_contract_identity.py  test_contract_normalize.py  test_contract_opportunity_page.py  test_contract_recheck.py  test_contract_reminders.py  test_deadlines.py  test_identity.py  test_missing_fields.py  test_notion_bootstrap.py  test_notion_pages.py  test_notion_schema.py  test_records.py  test_reminders.py  test_research.py  test_seed.py  validate-cli.test.cjs
tools/: bootstrap-notion.cjs  build-workflows.cjs  compare-workflows.cjs  export-notion.cjs  seed-notion.cjs  validate.cjs
(+49 files in other folders)
